<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/latar"
    tools:context=".userinterface.MainActivity">

    <ImageView
        android:id="@+id/iconLogin"
        android:layout_width="148dp"
        android:layout_height="152dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:alpha="0"
        android:text="@string/login_description"
        android:textColor="@color/font"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvLogin"
        android:textColor="@color/font"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginDescription"
        tools:alpha="1" />

    <com.example.storyapp.customview.CVEmail
        android:id="@+id/CVEmail"
        android:layout_width="291dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        tools:alpha="1" />

    <com.example.storyapp.customview.CVPassword
        android:id="@+id/PasswordLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/CVEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/CVEmail"
        app:layout_constraintTop_toBottomOf="@+id/CVEmail"
        tools:alpha="1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0"
        android:backgroundTint="@color/button"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="@+id/PasswordLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/seePassword"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tvRegistDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/register"
        android:textColor="@color/font"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <CheckBox
        android:id="@+id/seePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="1"
        android:textColor="@color/font"
        android:text="@string/passwordVisible"
        app:layout_constraintStart_toStartOf="@+id/PasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLogin" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/register_button"
        android:textColor="@color/register_click"
        app:layout_constraintStart_toEndOf="@+id/tvRegistDescription"
        app:layout_constraintTop_toTopOf="@+id/tvRegistDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CVEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>